// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamOverview renders with no props 1`] = `
<div
  styleName="teamoverview-main"
>
  <h1>
    Active team members
  </h1>
  <p>
    If this list contains members who have left your organisation, please 
    <span
      styleName="contact-us-exlink"
    >
      <a
        href="/contact-us"
        rel="external"
        target="_blank"
      >
        contact us
      </a>
    </span>
     to have them removed
  </p>
  You are the only registered buyer in your team
</div>
`;

exports[`TeamOverview renders with props 1`] = `
<div
  styleName="teamoverview-main"
>
  <h1>
    Active team members
  </h1>
  <p>
    If this list contains members who have left your organisation, please 
    <span
      styleName="contact-us-exlink"
    >
      <a
        href="/contact-us"
        rel="external"
        target="_blank"
      >
        contact us
      </a>
    </span>
     to have them removed
  </p>
  <table
    className="content-table summary-item-body"
  >
    <thead>
      <tr
        styleName="teamoverview-table-row"
      >
        <th
          styleName="teamoverview-table-heading"
        >
          Name
        </th>
        <th
          styleName="teamoverview-table-heading"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        styleName="summary-item-row"
      >
        <td
          styleName="summary-item-field-name"
        >
          AJ
        </td>
        <td
          styleName="summary-item-field"
        >
          <a
            href="mailto:marketplace@digital.gov.au"
          >
            marketplace@digital.gov.au
          </a>
        </td>
      </tr>
      <tr
        styleName="summary-item-row"
      >
        <td
          styleName="summary-item-field-name"
        >
          Alex
        </td>
        <td
          styleName="summary-item-field"
        >
          <a
            href="mailto:alex.sadleir+s@digital.gov.au"
          >
            alex.sadleir+s@digital.gov.au
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
